[gd_scene load_steps=3 format=3 uid="uid://sgs00cssdkdd"]

[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_s16x8"]
[ext_resource type="Theme" uid="uid://l28o45infhdy" path="res://ui/game.theme" id="1_yx3hl"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yx3hl")
script = ExtResource("1_s16x8")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="Titlebar" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"MenuPanelTitlebar"

[node name="Label" type="Label" parent="Layout/Titlebar"]
layout_mode = 2
text = "PAUSED"

[node name="Options" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"MenuPanelBody"

[node name="Layout" type="VBoxContainer" parent="Layout/Options"]
layout_mode = 2

[node name="BTN_Resume" type="Button" parent="Layout/Options/Layout"]
layout_mode = 2
text = "Resume"

[node name="BTN_Restart" type="Button" parent="Layout/Options/Layout"]
layout_mode = 2
text = "Restart Level"

[node name="BTN_Options" type="Button" parent="Layout/Options/Layout"]
layout_mode = 2
text = "Options"

[node name="BTN_Q2Main" type="Button" parent="Layout/Options/Layout"]
layout_mode = 2
text = "Quit to Main"

[node name="BTN_Quit" type="Button" parent="Layout/Options/Layout"]
layout_mode = 2
text = "Quit to Desktop"

[connection signal="pressed" from="Layout/Options/Layout/BTN_Resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="Layout/Options/Layout/BTN_Restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="Layout/Options/Layout/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="Layout/Options/Layout/BTN_Q2Main" to="." method="_on_btn_q_2_main_pressed"]
[connection signal="pressed" from="Layout/Options/Layout/BTN_Quit" to="." method="_on_btn_quit_pressed"]
