extends UIControl

# ------------------------------------------------------------------------------
# Signals
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Constants and ENUMs
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Export Variables
# ------------------------------------------------------------------------------
@export_category("Pause Menu")
@export var options_menu_name : StringName = &""

# ------------------------------------------------------------------------------
# Variables
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Onready Variables
# ------------------------------------------------------------------------------
@onready var _btn_resume: Button = $Layout/Options/Layout/BTN_Resume


# ------------------------------------------------------------------------------
# Setters / Getters
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Override Methods
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# "Virtual" Private Methods
# ------------------------------------------------------------------------------
func _visibility_updating(data : Dictionary) -> void:
	if not visible:
		_btn_resume.grab_focus.call_deferred()

# ------------------------------------------------------------------------------
# Public Methods
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# Handler Methods
# ------------------------------------------------------------------------------

func _on_btn_resume_pressed() -> void:
	request(UILayer.REQUEST_CLOSE_ALL_UI)
	request(UILayer.REQUEST_TOGGLE_PAUSE)


func _on_btn_restart_pressed() -> void:
	request(Level.REQUEST_RESTART_LEVEL)


func _on_btn_options_pressed() -> void:
	if options_menu_name.is_empty(): return
	request(UILayer.REQUEST_SHOW_UI, {"ui_name":options_menu_name})


func _on_btn_q_2_main_pressed() -> void:
	request(UILayer.REQUEST_QUIT_TO_MAIN)


func _on_btn_quit_pressed() -> void:
	request(UILayer.REQUEST_QUIT_APPLICATION)
